--- a/src/pages/organizations/organizations.html
+++ b/src/pages/organizations/organizations.html
@@ -7,12 +7,15 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>organizations</ion-title>
+    <button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Organizations</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <h3>Organizations view page</h3>
 </ion-content>
